<resources>
    <string name="app_name">Strength Calculator</string>

    <string name="welcome">Welcome</string>
    <string name="lbs">Lbs</string>
    <string name="kgs">Kgs</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="benchPress">Bench Press</string>
    <string name="squat">Squat</string>
    <string name="deadLift">DeadLift</string>
    <string name="ohp">Over Head Press</string>
    <string name="reps">Reps</string>
    <string name="forHowMany">for</string>
    <string name="weight">Weight</string>
    <string name="repMax">1 Rep Max</string>
    <string name="untrained">Untrained</string>
    <string name="novice">Novice</string>
    <string name="skilled">Skilled</string>
    <string name="advanced">Advanced</string>
    <string name="elite">Elite</string>

    <!-- Tool Bar Headers !-->
    <string name="strengthHistory">Strength History</string>
    <string name="newCalculations">New Calculation</string>

</resources>
