<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainGrey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/mainColor">

        <TextView
            android:id="@+id/welcomeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/welcome"
            android:textColor="#ffffff"
            android:textSize="28sp"/>

        <RadioButton
            android:id="@+id/lbsRBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeTV"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:text="@string/lbs"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:buttonTint="#FFFFFF"
            android:button="@drawable/radio_button_layout"/>

        <RadioButton
            android:id="@+id/kgsRBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeTV"
            android:layout_toRightOf="@id/lbsRBTN"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:text="@string/kgs"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:buttonTint="#FFFFFF"
            android:button="@drawable/radio_button_layout"/>

        <RadioButton
            android:id="@+id/maleRBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbsRBTN"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:text="@string/male"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:buttonTint="#FFFFFF"
            android:button="@drawable/radio_button_layout"/>

        <RadioButton
            android:id="@+id/femaleRBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbsRBTN"
            android:layout_toRightOf="@id/maleRBTN"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:text="@string/female"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:buttonTint="#FFFFFF"
            android:button="@drawable/radio_button_layout"/>

    </RelativeLayout>

    <include
        android:id="@+id/nextBTN"
        layout="@layout/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="225dp"
        android:layout_marginRight="50dp"/>


</RelativeLayout>