<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/benchPressCV"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp">

    <!--layout for bench press card view !-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Header Text View !-->
        <TextView
            android:id="@+id/exerciseHeaderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/benchPress"
            android:textColor="#303233"
            android:textSize="20sp"/>

        <!--Layout that holds the edit texts!-->
        <LinearLayout
            android:id="@+id/userInputLayout"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/exerciseHeaderTV"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="17dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/repsET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/reps"
                android:maxLength="3"
                android:background="@null"
                android:textColor="#303233"
                android:textSize="20sp"
                android:ems="2"
                android:singleLine="true"
                android:inputType="number"
                android:layout_weight="1"
                android:nextFocusDown="@+id/weightET"/>

            <TextView
                android:id="@+id/repsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-30dp"
                android:text="@string/reps"
                android:textSize="20sp"
                android:textColor="#303233"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/forHowManyTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forHowMany"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:textColor="#303233"
                android:visibility="invisible"/>

            <EditText
                android:id="@+id/weightET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="-30dp"
                android:hint="@string/weight"
                android:background="@null"
                android:maxLength="6"
                android:textColor="#303233"
                android:textSize="20sp"
                android:ems="3"
                android:singleLine="true"
                android:inputType="number"
                android:layout_weight="1"
                android:imeOptions="actionDone"/>

            <TextView
                android:id="@+id/weightTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="-40dp"
                android:text="@string/kgs"
                android:textSize="20sp"
                android:textColor="#303233"
                android:visibility="invisible"/>

        </LinearLayout>

        <!--Layout that holds the 1RM !-->
        <RelativeLayout
            android:id="@+id/oneRepMaxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userInputLayout"
            android:layout_marginTop="15dp">

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:background="#99093170"/>

            <TextView
                android:id="@+id/repMaxHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/repMax"
                android:textColor="#303233"
                android:textSize="20sp"/>

            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                android:id="@+id/progressBar"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/repMaxHeader"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                app:rcBackgroundPadding="5dp"
                app:rcBackgroundRadius="10dp"/>


        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>

