<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:padding="10dp"
        android:isScrollContainer="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Bench Press Card Layout!-->
           <android.support.v7.widget.CardView
               xmlns:card_view="http://schemas.android.com/apk/res-auto"
               android:id="@+id/benchPressCV"
               android:layout_gravity="center"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               card_view:cardCornerRadius="4dp">

               <!--layout for bench press card view !-->
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent">

                   <!--Header Text View !-->
                   <TextView
                       android:id="@+id/benchPressHeaderTV"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_centerHorizontal="true"
                       android:text="@string/benchPress"
                       android:textColor="#303233"
                       android:textSize="20sp"/>

                   <!--Layout that holds the edit texts!-->
                   <LinearLayout
                       android:layout_width="270dp"
                       android:layout_height="wrap_content"
                       android:layout_below="@id/benchPressHeaderTV"
                       android:layout_marginTop="10dp"
                       android:layout_marginLeft="17dp"
                       android:orientation="horizontal"
                       android:weightSum="2">

                       <EditText
                           android:id="@+id/benchPressRepsET"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:gravity="center"
                           android:hint="@string/reps"
                           android:maxLength="3"
                           android:background="@null"
                           android:textColor="#303233"
                           android:textSize="20sp"
                           android:ems="2"
                           android:singleLine="true"
                           android:inputType="number"
                           android:layout_weight="1"
                           android:nextFocusDown="@+id/benchPressWeightET"/>

                       <TextView
                           android:id="@+id/benchPressRepsTV"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginLeft="-30dp"
                           android:text="@string/reps"
                           android:textSize="20sp"
                           android:textColor="#303233"
                           android:visibility="invisible"/>

                       <TextView
                           android:id="@+id/benchPressForTV"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/forHowMany"
                           android:layout_marginLeft="10dp"
                           android:textSize="20sp"
                           android:textColor="#303233"
                           android:visibility="invisible"/>

                       <EditText
                           android:id="@+id/benchPressWeightET"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:gravity="center"
                           android:layout_marginLeft="-30dp"
                           android:hint="@string/weight"
                           android:background="@null"
                           android:maxLength="6"
                           android:textColor="#303233"
                           android:textSize="20sp"
                           android:ems="3"
                           android:singleLine="true"
                           android:inputType="number"
                           android:layout_weight="1"
                           android:imeOptions="actionDone"/>

                       <TextView
                           android:id="@+id/benchPressWeightTV"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginRight="10dp"
                           android:layout_marginLeft="-40dp"
                           android:text="@string/kgs"
                           android:textSize="20sp"
                           android:textColor="#303233"
                           android:visibility="invisible"/>

                   </LinearLayout>
               </RelativeLayout>
           </android.support.v7.widget.CardView>

            <!--Squat Card Layout!-->
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/squatCV"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/benchPressCV"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="4dp">

                <!--layout for squat card view !-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--Header Text View !-->
                    <TextView
                        android:id="@+id/squatHeaderTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/squat"
                        android:textColor="#303233"
                        android:textSize="20sp"/>

                    <!--Layout that holds the edit texts!-->
                    <LinearLayout
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/squatHeaderTV"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="17dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <EditText
                            android:id="@+id/squatRepsET"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/reps"
                            android:maxLength="3"
                            android:background="@null"
                            android:textColor="#303233"
                            android:textSize="20sp"
                            android:ems="2"
                            android:singleLine="true"
                            android:inputType="number"
                            android:layout_weight="1"
                            android:nextFocusDown="@+id/squatWeightET"/>

                        <TextView
                            android:id="@+id/squatRepsTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-30dp"
                            android:text="@string/reps"
                            android:textSize="20sp"
                            android:textColor="#303233"
                            android:visibility="invisible"/>

                        <TextView
                            android:id="@+id/squatForTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forHowMany"
                            android:layout_marginLeft="10dp"
                            android:textSize="20sp"
                            android:textColor="#303233"
                            android:visibility="invisible"/>

                        <EditText
                            android:id="@+id/squatWeightET"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginLeft="-30dp"
                            android:hint="@string/weight"
                            android:background="@null"
                            android:maxLength="6"
                            android:textColor="#303233"
                            android:textSize="20sp"
                            android:ems="3"
                            android:singleLine="true"
                            android:inputType="number"
                            android:layout_weight="1"
                            android:imeOptions="actionDone"/>

                        <TextView
                            android:id="@+id/squatWeightTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="-40dp"
                            android:text="@string/kgs"
                            android:textSize="20sp"
                            android:textColor="#303233"
                            android:visibility="invisible"/>

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <!--DeadLift Card Layout!-->
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/DeadLiftCV"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/squatCV"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="4dp">

                <!--layout for squat card view !-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--Header Text View !-->
                    <TextView
                        android:id="@+id/deadLiftHeaderTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/deadLift"
                        android:textColor="#303233"
                        android:textSize="20sp"/>

                    <!--Layout that holds the edit texts!-->
                    <LinearLayout
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/deadLiftHeaderTV"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="17dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <EditText
                            android:id="@+id/deadLiftRepsET"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/reps"
                            android:maxLength="3"
                            android:background="@null"
                            android:textColor="#303233"
                            android:textSize="20sp"
                            android:ems="2"
                            android:singleLine="true"
                            android:inputType="number"
                            android:layout_weight="1"
                            android:nextFocusDown="@+id/deadLiftWeightET"/>

                        <TextView
                            android:id="@+id/deadLiftRepsTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-30dp"
                            android:text="@string/reps"
                            android:textSize="20sp"
                            android:textColor="#303233"
                            android:visibility="invisible"/>

                        <TextView
                            android:id="@+id/deadLiftForTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forHowMany"
                            android:layout_marginLeft="10dp"
                            android:textSize="20sp"
                            android:textColor="#303233"
                            android:visibility="invisible"/>

                        <EditText
                            android:id="@+id/deadLiftWeightET"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginLeft="-30dp"
                            android:hint="@string/weight"
                            android:background="@null"
                            android:maxLength="6"
                            android:textColor="#303233"
                            android:textSize="20sp"
                            android:ems="3"
                            android:singleLine="true"
                            android:inputType="number"
                            android:layout_weight="1"
                            android:imeOptions="actionDone"/>

                        <TextView
                            android:id="@+id/deadLiftWeightTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="-40dp"
                            android:text="@string/kgs"
                            android:textSize="20sp"
                            android:textColor="#303233"
                            android:visibility="invisible"/>

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>

    <!-- Floating Action button !-->
    <include layout="@layout/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="30dp"/>


</RelativeLayout>